--- a/src/styles/MapContainer.scss
+++ b/src/styles/MapContainer.scss
@@ -4,3 +4,9 @@
   width: 100vw;
   height: 100vh;
 }
+
+@media screen and (min-width: 320px) and (max-width: 1024px) {
+  .map {
+    align-items: flex-end;
+  }
+}
